# mobile-flow

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  README.zh-CN.md  pyrightconfig.json
agent/: .env.example  entry_point.py  pyproject.toml  pyrightconfig.json
agent/config/: default.json  development.json  production.json  tunnel-test.env
agent/src/mobileflow_agent/: __init__.py  __main__.py  tray.py
agent/src/mobileflow_agent/core/: __init__.py  client_scope.py  config.py  errors.py  event_bus.py  events.py  identity_resolver.py  scope_manager.py  scope_state.py
agent/src/mobileflow_agent/crypto/: __init__.py  cert_generator.py  crypto_module.py  key_store.py  relay_pairing.py
agent/src/mobileflow_agent/daemon/: __init__.py  control_server.py  install.py  lock.py  manager.py  state.py
agent/src/mobileflow_agent/dashboard/: __init__.py  log_buffer.py
agent/src/mobileflow_agent/plugins/: __init__.py  loader.py  manifest.py  registry.py
agent/src/mobileflow_agent/providers/: __init__.py  acp_client.py  acp_converter.py  acp_provider.py  approval_classifier.py  base.py  registry.py  terminal_auth.py
agent/tests/: conftest.py  test_acp_capabilities.py  test_acp_converter.py  test_acp_imports.py  test_approval_classifier.py  test_async_tools.py  test_auth_brute_force.py  test_bug_repro.py  test_capabilities.py  test_cli_lifecycle.py  test_cli_manager.py  test_command_executor.py  test_connection_protocol.py  test_context_resolver.py  test_crypto.py  test_diff_unified.py  test_diff_unified_path.py  test_disconnect_grace.py  test_event_bus.py  test_file_operations.py  test_git_errors.py  test_git_models.py  test_git_state.py  test_git_user_flow.py  test_operation_manager.py  test_plugin_e2e.py  test_plugin_loader.py  test_plugin_registry.py  test_port_detector.py  test_port_proxy_properties.py  test_port_proxy_rewrite.py  test_project_manager_recent.py  test_project_scanner.py  test_provider_registry_core.py  test_refresh_scheduler.py  test_regression.py  test_relay_integration.py  test_relay_pairing.py  test_remote_access.py  test_scope_remap_chain.py  (+10 more)
agent/tests/core/: __init__.py  test_identity_resolver.py  test_scope_integration.py  test_scope_manager.py  test_scope_state.py
protocol/: README.md  README_zh.md  generate_dart.py  generate_dart_payloads.py  pyproject.toml  verify_dart.py
protocol/src/mobileflow_protocol/: __init__.py  envelope.py  errors.py  events.py  messages.py  models.py  payload_registry.py  types.py  version.py
relay/: .env.example  Caddyfile  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
relay/src/mobileflow_relay/: __init__.py  __main__.py  auth.py  relay_server.py
(+405 files in other folders)
