[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mobileflow-agent"
version = "0.1.1"
description = "MobileFlow Desktop Agent — phone-to-desktop AI coding bridge"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "MobileFlow Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "websockets>=12.0",
    "watchfiles>=0.21",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "loguru>=0.7",
    "qrcode>=7.4",
    "PyNaCl>=1.5.0",
    "aiohttp>=3.9",
    "mobileflow-protocol",
    "agent-client-protocol>=0.9.0",
    "pywinpty>=2.0; platform_system=='Windows'",
    "jsonschema>=4.0",
    "keyring>=24.0",
    "pystray>=0.19",
    "Pillow>=10.0",
    "python-i18n[json]>=0.3.9",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.0",
    "ruff>=0.4",
    "pyinstaller>=6.0",
]

[project.scripts]
mobileflow-agent = "mobileflow_agent.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.setuptools.packages.find]
where = ["src"]
