[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mobileflow-relay"
version = "0.1.0"
description = "MobileFlow relay service (optional self-hosted deployment)"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "websockets>=12.0",
    "PyNaCl>=1.5.0",
    "pydantic>=2.0",
    "loguru>=0.7",
]

[project.scripts]
mobileflow-relay = "mobileflow_relay.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
